fix: remove height 60vh and duplicate hero img on mobile

--- a/styles.css
+++ b/styles.css
@@ -1002,9 +1002,8 @@ small {
 	}
 
 	.hero .container {
-		height: 60vh;
-		text-align: center;
-		position: relative;
+    text-align: center;
+    position: relative;
 	}
 
 	
